--- a/core/css/apps.scss
+++ b/core/css/apps.scss
@@ -702,7 +702,7 @@ $min-content-width: $breakpoint-mobile - $navigation-width - $list-min-width;
 				+ label {
 					display: inline-block;
 					width: 100%;
-					padding: 5px 0;
+					line-height: 44px;
 				}
 			}
 		}
